# quest-technical-test

./: .gitignore  .oxfmtrc.json  .oxlintrc.json  AGENTS.md  LICENSE  README.md  components.json  drizzle.config.ts  flake.nix  index.html  lefthook.yml  package.json  tsconfig.base.json  tsconfig.build.json  tsconfig.json  vite.config.ts  vitest.config.ts  vitest.setup.ts
.github/: renovate.json
.github/workflows/: build.yaml  ci.yaml
drizzle/memory/0000_memory_init/: migration.sql
drizzle/memory/0001_search_index/: migration.sql
src/: main.tsx  setup.test.ts  styles.css
src-tauri/: .gitignore  Cargo.toml  clippy.toml  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/history/: commands.rs  discovery.rs  discovery_tests.rs  errors.rs  mod.rs  service.rs  service_tests.rs  sqlite.rs  types.rs
src-tauri/src/history/adapters/: chromium.rs  chromium_tests.rs  firefox.rs  firefox_tests.rs  mod.rs  safari.rs  safari_tests.rs
src-tauri/src/memory/: commands.rs  service.rs  types.rs
src/components/: Header.tsx  SettingsDialog.tsx  chat-runtime-provider.tsx  privacy-warning.tsx
src/components/assistant-ui/: attachment.tsx  markdown-text.tsx  thread.tsx  tool-fallback.tsx  tooltip-icon-button.tsx
src/components/ui/: accordion.tsx  card.tsx  (+31 more)
src/hooks/: use-api-keys.ts  use-memory-settings.ts  use-privacy-consent.ts
src/lib/: browser-history.ts  chat-model-adapter.ts
src/routes/: __root.tsx  index.tsx
src/types/: node-sqlite.d.ts  sqljs.d.ts
(+37 files in other folders)
