[package]
name = "quest-technical-test"
version = "0.1.0"
license = "MIT"
authors = ["Michael Brusegard"]
edition = "2024"
rust-version = "1.92"

[lints.clippy]
all = { level = "warn", priority = -1 }
cast_possible_truncation = "allow"
cast_precision_loss = "allow"
module_name_repetitions = "allow"
unwrap_used = "allow"
expect_used = "allow"
panic = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
float_cmp = "warn"
mutex_atomic = "warn"
redundant_clone = "warn"
wildcard_dependencies = "warn"

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "quest_technical_test_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
tauri = { version = "2.10.3", features = ["macos-private-api"] }
tauri-plugin-opener = "2.5.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tauri-plugin-http = "2.5.7"
tauri-plugin-stronghold = "2.3.1"

[profile.dev.package.scrypt]
opt-level = 3
